--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -157,3 +157,16 @@ img.large{
 .error{
   color: #a02020;
 }
+.danger{
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+.alert_info{
+  color:#2020a0;
+  background-color: #e0e0ff;
+}
+.alert_danger{
+  color:#a02020;
+  background-color: #ffe0e0e0;
+}
