--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,17 +10,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-#root{
+#root {
   height: 100%;
 }
+
 /* Layout */
 .grid-container {
   display: grid;
-  grid-template-areas: 
-      'header'
-      'main'
-      'footer';
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
@@ -29,43 +29,43 @@ header {
   grid-area: header;
   background-color: #203040;
 }
-
 main {
   grid-area: main;
   padding: 1rem;
 }
-
 footer {
   grid-area: footer;
   background-color: #203040;
   color: #ffffff;
 }
 /* Common */
-h1{
+h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
 }
-
-h2{
+h2 {
   font-size: 1.6rem;
   padding: 1rem 0;
 }
 
-a{
+a {
   text-decoration: none;
 }
 a:hover {
   color: #ff8000;
 }
-ul{
+ul {
   padding: 0;
   margin: 0;
   list-style-type: none;
 }
-li{
+li {
   margin-top: 1rem;
 }
-button{
+input,
+select,
+textarea,
+button {
   padding: 1rem;
   border-radius: 0.5rem;
   border: 0.1rem #a4a4a4 solid;
@@ -73,16 +73,21 @@ button{
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
-button:hover{
+input:hover,
+select:hover,
+textarea:hover,
+button:hover {
   border: 0.1rem #404040 solid;
 }
-button.primary{
+button.primary {
   background-color: #f0c040;
 }
-button.block{
+button.block {
   width: 100%;
 }
 /* Header */
@@ -95,7 +100,7 @@ a.brand {
   font-size: 3rem;
   font-weight: bold;
 }
-.row{
+.row {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -113,6 +118,7 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
+
 /* Image */
 img {
   border-radius: 0.5rem;
@@ -121,8 +127,8 @@ img.medium {
   max-width: 29rem;
   width: 100%;
 }
-img.large{
-  width:100%
+img.large {
+  width: 100%;
 }
 /* Card */
 .card {
@@ -138,35 +144,34 @@ img.large{
   margin-bottom: 0.5rem;
 }
 
-.price{
+.price {
   font-size: 2rem;
 }
-
 /* Rating */
-.rating span{
+.rating span {
   color: #f0c040;
   margin: 0.1rem;
 }
-.rating span:last-child{
-  color: #404040
+.rating span:last-child {
+  color: #404040;
 }
 /* Alert */
-.success{
+.success {
   color: #20a020;
 }
-.error{
+.danger {
   color: #a02020;
 }
-.alert{
+.alert {
   padding: 1rem;
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
 }
-.alert_info{
-  color:#2020a0;
+.alert_info {
+  color: #2020a0;
   background-color: #e0e0ff;
 }
-.alert_danger{
-  color:#a02020;
+.alert_danger {
+  color: #a02020;
   background-color: #ffe0e0e0;
 }
